# inmobiliaria-data

./: README.md  md  pyproject.toml  requirements.txt  urls.txt
.github/workflows/: snapshot_to_supabase_daily.yml
data copy 2/raw/: -departamento-3900-torre-napoles-jesus-maria-lima-lima-cygnus-grupo-inmobiliario.html  https-nexoinmobiliario-pe-departamentos-jesus-maria-edificio-blend-3362__cards.txt  https-nexoinmobiliario-pe-departamentos-jesus-maria-el-olivar-3686.html  https-nexoinmobiliario-pe-departamentos-jesus-maria-luna-3503.html  https-nexoinmobiliario-pe-departamentos-jesus-maria-modena-3736.html  https-nexoinmobiliario-pe-departamentos-jesus-maria-modena-3736__cards.txt  https-nexoinmobiliario-pe-departamentos-jesus-maria-zenna-3386.html  https-nexoinmobiliario-pe-departamentos-magdalena-del-mar-arbora-3233.html  https-nexoinmobiliario-pe-departamentos-magdalena-del-mar-arbora-3233__cards.txt
data copy 2/registry/: scraper_registry.db
data copy 2/reporting/: nexo_reporte.xlsx
data copy 2/silver/: -departamento-3900-torre-napoles-jesus-maria-lima-lima-cygnus-grupo-inmobiliario__proyecto.parquet  -departamento-3900-torre-napoles-jesus-maria-lima-lima-cygnus-grupo-inmobiliario__tipologias.parquet  (+7 more)
inmobiliario_scrapers/: __init__.py
notebooks/: dom_inspector_scraping_fallback.ipynb  identificar_urls_de_todos.ipynb  otros_proyectos.csv
property_scrappers.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: build_gold_snapshot.py  push_supabase_snapshot.py
tests/: test_card_regex.py  test_utils.py
(+816 files in other folders)
